<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".adeia">


    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:gravity="center"
                    android:textSize="34sp"
                    android:textColor="#fff"
                    android:background="#0F4E80"
                    android:text="@string/adiea"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"/>

            <Button
                    android:id="@+id/estikara_paryer_doaa"
                    android:text="@string/estikara_prayer_doaa"
                    style="@style/btn_athkar_style"/>

            <Button
                    android:id="@+id/grief_doaa"
                    android:text="@string/grief"
                    style="@style/btn_athkar_style"/>

            <Button
                    android:id="@+id/travelling_doaa"
                    android:text="@string/traveling"
                    style="@style/btn_athkar_style"/>

            <Button
                    android:id="@+id/anger_doaa"
                    android:text="@string/anger"
                    style="@style/btn_athkar_style"/>
            <Button
                    android:id="@+id/beginning"
                    android:text="@string/beginning"
                    style="@style/btn_athkar_style"
            />
            <Button
                    android:id="@+id/master_of_estikfar"
                    android:text="@string/master_of_estikfar"
                    style="@style/btn_athkar_style"
            />
            <Button
                    android:id="@+id/kfart_almajlis"
                    android:text="@string/kfart_almajlis"
                    style="@style/btn_athkar_style"
            />

            <Button
                    android:id="@+id/entering_market_doaa"
                    android:text="@string/eanterin_market"
                    style="@style/btn_athkar_style"
                    android:layout_marginBottom="16dp"
            />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</FrameLayout>